# Stepik-main-project

./: .gitignore  README.rst  pyproject.toml
stepik_main_project/page/: base_page.py  locators.py  login_page.py  main_page.py  product_page.py
tests/: conftest.py  test_from_another_exercise.py  test_main_page.py  test_product_page.py
